Added refresh route in gateway
